src/test/deca/context/invalid/extension/access-2-dim-with-1.deca
// Programme testant l'accès à un tableau à deux dimension avec 1 argument

{
    int[4, 4] tab;
    tab[2] = 4;
}